fixed tab alignment in tabbed container

--- a/ui.apps/src/main/content/jcr_root/apps/jlr/components/tabbedcontainer/v1/tabbedcontainer/clientlibs/css/tabbedcontainer.css
+++ b/ui.apps/src/main/content/jcr_root/apps/jlr/components/tabbedcontainer/v1/tabbedcontainer/clientlibs/css/tabbedcontainer.css
@@ -73,6 +73,7 @@ margin: 0px 20px;
 padding: 0;
 border: 0;
 border-bottom:5px solid #fff; 
+height: 45px !important;
 }
 .cmp-tabbedContainer .DxTabs__tab:hover{
     border: 0;  
@@ -308,7 +309,8 @@ margin-bottom: 0 !important;
     }
     .cmp-tabbedContainer .shelfComponent{
         padding-left: 25px;
-    padding-right: 25px;
+        padding-right: 25px;
+        margin: 0;
     }
     .cmp-tabbedContainer .DxTabs__tablist.leftShade {
         -webkit-mask-image: linear-gradient(to left, black 50%, transparent 100%);
@@ -330,6 +332,16 @@ margin-bottom: 0 !important;
     .cmp-contentBlocksContainer .cmp-tabbedContainer .DxTabs{
         margin: 0px 25px;
         width: calc(100% - 50px);
+    }
+    .cmp-tabbedContainer .videoCustom:after{
+        left: 35%;
+        top: 30%;
+    }
+    .cmp-contentBlocksContainer .cmp-tabbedContainer .DxTabs__tablist{
+        top: 1px;
+    }
+    .cmp-tabbedContainer .Interior360__pano-controls{
+        bottom: 40px;
     }
 }
 @media screen and (min-width: 1px) and (max-width: 375px) {
@@ -369,7 +381,8 @@ margin-bottom: 0 !important;
     }
     .cmp-tabbedContainer .shelfComponent{
         padding-left: 30px;
-    padding-right: 30px;
+        padding-right: 30px;
+        margin: 0;
     }
     .cmp-tabbedContainer .headerClass{
         max-width: 100%;
@@ -377,7 +390,13 @@ margin-bottom: 0 !important;
     .cmp-tabbedContainer .DxTabs{
         bottom: -50px;
     }
+    .cmp-tabbedContainer .Interior360__pano-controls{
+        bottom: 80px;
     }
+    .cmp-contentBlocksContainer .cmp-tabbedContainer .DxTabs__tablist{
+        top: 1px;
+    }
+}
 @media screen and (min-width: 1920px) and (max-width: 2500px) {
     .cmp-tabbedContainer {
         padding: 60px 130px;
